[feat] 分割训练和测试

--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -2,14 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import csv\n",
+    "import random\n",
     "from PIL import Image\n",
     "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split Train and Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split(origin_image_path, origin_mask_path):\n",
+    "    images = os.listdir(origin_image_path)\n",
+    "    masks = os.listdir(origin_mask_path)\n",
+    "    assert len(images) == len(masks)\n",
+    "    num_data = len(images)\n",
+    "    random.shuffle(images)\n",
+    "    os.makedirs(\"./data/train/image\")\n",
+    "    os.makedirs(\"./data/train/mask\")\n",
+    "    os.makedirs(\"./data/test/image\")\n",
+    "    os.makedirs(\"./data/test/mask\")\n",
+    "    for idx, image in enumerate(tqdm(images)):\n",
+    "        image_name = image.split(\"/\")[-1]\n",
+    "        os.system(\"cp {} {}\".format(os.path.join(origin_image_path, image_name), os.path.join(f\"./data/{'test' if idx <= num_data // 10 else 'train'}/image\", image_name)))\n",
+    "        os.system(\"cp {} {}\".format(os.path.join(origin_mask_path, image_name), os.path.join(f\"./data/{'test' if idx <= num_data // 10 else 'train'}/mask\", image_name)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2900/2900 [00:06<00:00, 435.87it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "split(\"./data/original/image/\", \"./data/original/mask/\")"
    ]
   },
   {
