[fix] 修复csv路径错误

--- a/pre_processing.ipynb
+++ b/pre_processing.ipynb
@@ -32,10 +32,12 @@
     "    assert len(images) == len(masks)\n",
     "    num_data = len(images)\n",
     "    random.shuffle(images)\n",
-    "    os.makedirs(\"./data/train/image\")\n",
-    "    os.makedirs(\"./data/train/mask\")\n",
-    "    os.makedirs(\"./data/test/image\")\n",
-    "    os.makedirs(\"./data/test/mask\")\n",
+    "    os.system(\"rm -rf ./data/train/*\")\n",
+    "    os.system(\"rm -rf ./data/test/*\")\n",
+    "    os.makedirs(\"./data/train/image\", exist_ok=True)\n",
+    "    os.makedirs(\"./data/train/mask\", exist_ok=True)\n",
+    "    os.makedirs(\"./data/test/image\", exist_ok=True)\n",
+    "    os.makedirs(\"./data/test/mask\", exist_ok=True)\n",
     "    for idx, image in enumerate(tqdm(images)):\n",
     "        image_name = image.split(\"/\")[-1]\n",
     "        os.system(\"cp {} {}\".format(os.path.join(origin_image_path, image_name), os.path.join(f\"./data/{'test' if idx <= num_data // 10 else 'train'}/image\", image_name)))\n",
@@ -51,7 +53,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2900/2900 [00:06<00:00, 435.87it/s]\n"
+      "100%|██████████| 2900/2900 [00:07<00:00, 413.31it/s]\n"
      ]
     }
    ],
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,14 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2609/2609 [01:29<00:00, 29.12it/s]\n",
+      "100%|██████████| 2609/2609 [00:06<00:00, 407.35it/s]\n",
+      "100%|██████████| 291/291 [00:10<00:00, 28.95it/s]\n",
+      "100%|██████████| 291/291 [00:00<00:00, 374.17it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "# split_images(\"./data/train/image\", \"./data/train/image_splited\")\n",
-    "# split_images(\"./data/train/mask\", \"./data/train/mask_splited\")\n",
-    "# split_images(\"./data/test/image\", \"./data/test/image_splited\")\n",
-    "# split_images(\"./data/test/mask\", \"./data/test/mask_splited\")\n",
+    "split_images(\"./data/train/image\", \"./data/train/image_splited\")\n",
+    "split_images(\"./data/train/mask\", \"./data/train/mask_splited\")\n",
+    "split_images(\"./data/test/image\", \"./data/test/image_splited\")\n",
+    "split_images(\"./data/test/mask\", \"./data/test/mask_splited\")\n",
     "# split_images(\"./data/predict/image\", \"./data/predict/image_splited\")"
    ]
   },
@@ -149,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,12 +199,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5218/5218 [00:07<00:00, 677.85it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 8 illegal data:\n",
+      "['left_train_0.png', 'left_train_1.png', 'right_A-17.png', 'left_train_898.png', 'right_train_419.png', 'right_train_1.png', 'right_train_0.png', 'left_A-5.png']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 8/8 [00:00<00:00, 13706.88it/s]\n",
+      "100%|██████████| 582/582 [00:00<00:00, 680.74it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 0 illegal data:\n",
+      "[]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "# filter_illegal_data(\"./data/train/image\", \"./data/train/mask\")\n",
-    "# filter_illegal_data(\"./data/test/image\", \"./data/test/mask\")"
+    "filter_illegal_data(\"./data/train/image_splited\", \"./data/train/mask_splited\")\n",
+    "filter_illegal_data(\"./data/test/image_splited\", \"./data/test/mask_splited\")"
    ]
   },
   {
@@ -203,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,23 +267,26 @@
     "    else:\n",
     "        masks = os.listdir(mask_dir)\n",
     "\n",
+    "    image_folder = os.path.basename(image_dir)\n",
+    "    mask_folder = os.path.basename(mask_dir) if mask_dir is not None else None\n",
+    "\n",
     "    assert len(images) == len(masks)\n",
     "\n",
     "    with open(f\"./data/{type}.csv\", \"w\", newline=\"\") as csvfile:\n",
     "        writer = csv.writer(csvfile)\n",
     "        writer.writerow([\"#\", \"img\", \"seg\"])\n",
     "        for i in range(len(images)):\n",
-    "            writer.writerow([i, os.path.join(image_dir, images[i]), os.path.join(mask_dir, masks[i]) if mask_dir is not None else \"./placeholder.png\"])"
+    "            writer.writerow([i, f\"{type}/{image_folder}/{images[i]}\", f\"{type}/{mask_folder}/{masks[i]}\" if mask_dir is not None else \"./placeholder.png\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# generate_csv(\"train\", \"./data/train/image\", \"./data/train/mask\")\n",
-    "# generate_csv(\"test\", \"./data/test/image\", \"./data/test/mask\")\n",
+    "generate_csv(\"train\", \"./data/train/image_splited\", \"./data/train/mask_splited\")\n",
+    "generate_csv(\"test\", \"./data/test/image_splited\", \"./data/test/mask_splited\")\n",
     "# generate_csv(\"predict\", \"./data/predict/image\")"
    ]
   }
